# rust_decentralized

./: Cargo.toml  README.md
core/bitfab_utils/: Cargo.toml
core/bitfab_utils/src/: lib.rs
core/net/http_core/: Cargo.toml
core/net/http_core/src/: constants.rs  lib.rs  server.rs  types.rs
core/net/p2p/: Cargo.toml
core/net/p2p/src/: lib.rs  message.rs  peer.rs  router.rs  server.rs  utils.rs
core/net/router/: Cargo.toml
core/net/router/src/: lib.rs  router.rs  types.rs
notes/: data_types.md  general.md
src/: http_routes.rs  main.rs  p2p_routes.rs
src/cli/: commands.rs  mod.rs  types.rs
tests/benchmark/: script.js
