[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "1.0.1"
tonic = "0.8.0"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version="1.0.144", features=["derive"]}
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["v4"]}
rand = "0.8"
bitfab_utils = {path = "../../bitfab_utils"}
